[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Menus/Quit_Button_hover.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menus/Resume_button_pressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/Resume_button_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menus/settings_cog_not_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menus/Resume_button_not_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menus/settings_cog_hover.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menus/settings_cog_pressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menus/Quit_Button_Not_Pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menus/Quit_Button_Pressed.png" type="Texture" id=9]
[ext_resource path="res://settings_theme.theme" type="Theme" id=10]
[ext_resource path="res://Menu/Pause.gd" type="Script" id=11]
[ext_resource path="res://Assets/Menus/spacebar_key.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menus/s_key.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menus/d_key.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menus/a_key.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menus/back_button_not_pressed.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menus/back_button_pressed.png" type="Texture" id=17]
[ext_resource path="res://Assets/Menus/back_button_hover.png" type="Texture" id=18]
[ext_resource path="res://Assets/Menus/e_key.png" type="Texture" id=19]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Menus/Acme____.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 11 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -128.0
margin_right = 96.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 96, 128 )
theme = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackPanel" type="Panel" parent="Control"]
self_modulate = Color( 1, 1, 1, 0.478431 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -97.0
margin_right = 204.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsPanel" type="Panel" parent="Control"]
visible = false
margin_left = -140.0
margin_top = -33.0
margin_right = 324.0
margin_bottom = 287.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/SettingsPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -110.5
margin_top = 24.0
margin_right = 110.5
margin_bottom = 91.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/SettingsPanel/Label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 32.0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 2 )
text = "Master Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="Control/SettingsPanel"]
margin_left = 72.0
margin_top = 112.0
margin_right = 256.0
margin_bottom = 128.0
min_value = -60.0
max_value = 6.0
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/SettingsPanel"]
margin_left = 72.0
margin_top = 152.0
margin_right = 416.0
margin_bottom = 296.0
color = Color( 0.0901961, 0.713726, 0.627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a_key" type="Sprite" parent="Control/SettingsPanel/ColorRect"]
position = Vector2( 56, 24 )
texture = ExtResource( 15 )

[node name="spacebar_key" type="Sprite" parent="Control/SettingsPanel/ColorRect"]
position = Vector2( 80, 120 )
texture = ExtResource( 12 )

[node name="s_key" type="Sprite" parent="Control/SettingsPanel/ColorRect"]
position = Vector2( 80, 56 )
texture = ExtResource( 13 )

[node name="d_key" type="Sprite" parent="Control/SettingsPanel/ColorRect"]
position = Vector2( 104, 24 )
texture = ExtResource( 14 )

[node name="Label3" type="Label" parent="Control/SettingsPanel/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = 16.0
margin_right = 108.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 2 )
text = "--- Left/Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control/SettingsPanel/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = 40.0
margin_right = 108.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "--- Duck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Control/SettingsPanel/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = 104.0
margin_right = 140.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 2 )
text = "--- Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Control/SettingsPanel/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = 72.0
margin_right = 108.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
text = "--- Quack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="e_key" type="Sprite" parent="Control/SettingsPanel/ColorRect"]
position = Vector2( 80, 88 )
texture = ExtResource( 19 )

[node name="TextureButton" type="TextureButton" parent="Control/SettingsPanel"]
margin_left = 16.0
margin_top = 272.0
margin_right = 56.0
margin_bottom = 312.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="Panel" parent="Control"]
margin_right = 192.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/PausePanel"]
margin_left = 12.0
margin_top = 7.0
margin_right = 177.0
margin_bottom = 74.0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="TextureButton" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -41.0
margin_right = 48.0
margin_bottom = 23.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="TextureButton" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = 31.0
margin_right = 48.0
margin_bottom = 95.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBtn" type="TextureButton" parent="Control/PausePanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = 87.0
margin_right = -52.0
margin_bottom = 119.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Control/SettingsPanel/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="pressed" from="Control/SettingsPanel/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/PausePanel/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="Control/PausePanel/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="Control/PausePanel/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
